feat: Enhance Gemini model selection and memory management
Updates Gemini model selection logic to use gemini-3-pro-preview for detailed and hallucinatory modes, and gemini-2.5-flash for other tasks, improving performance and quality. Enhances memory management UI with search functionality, loading states, and refined statistics display. Adds TypeScript types for Node and Vite, and adjusts tsconfig for better project structure. Updates README with developer contact information.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["node", "vite/client"]
   },
-  "include": ["src", "*.ts", "*.tsx", "*.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", "vite.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
